--- a/service.yaml
+++ b/service.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: Service
+kind: Service 
 metadata:
   name: nodeserver-service
 spec:
@@ -7,6 +7,8 @@ spec:
     app: nodeserver
   type: ClusterIP
   ports:
-  - name: nodeserver-service
+  - name: nodeserver-service 
     port: 80
+    targetPort: 3333
     protocol: TCP
+
