:sparkles: (add probes to .yaml) startUp / liveness / readiness
deployment.yaml file

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,6 +17,31 @@ spec:
       containers:
         - name: nodeserver
           image: "lfernandocosta/hello-node:v6.6"
+
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 3333
+            periodSeconds: 3
+            failureThreshold: 1
+            initialDelaySeconds: 10 
+
+          startupProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            periodSeconds: 3
+            failureTreshold: 30
+            
+          # livenessProbe:
+          #   httpGet:
+          #     path: /configmap
+          #     port: 3333
+          #   periodSeconds: 5
+          #   failureThreshold: 3
+          #   timeoutSeconds: 1
+          #   successThreshold: 1
+
           envFrom:
             - configMapRef:
                 name: nodeserver-env
