--- a/deployment.yaml
+++ b/deployment.yaml
@@ -18,6 +18,14 @@ spec:
         - name: nodeserver
           image: "lfernandocosta/hello-node:v6.6"
 
+          resources:
+            requests:
+              cpu: 100m
+              memory: 20Mi
+            limits:
+              cpu: 500m 
+              memory: 25Mi
+
           readinessProbe:
             httpGet:
               path: /healthz
